--- a/sites/site_1/intended/configs/s1-leaf3.cfg
+++ b/sites/site_1/intended/configs/s1-leaf3.cfg
@@ -26,6 +26,9 @@ no aaa root
 !
 username arista privilege 15 role network-admin secret sha512 $6$workshop$qdGGnHq6PanBl7yxiEMilA.SMMhqu1DYgf9oYtz.Vb9mZHMBbLAMm23XCj7xjVxovSotETugY98dG0ITlqsJ./
 !
+vlan 20
+   name Twenty
+!
 vlan 4094
    name MLAG_PEER
    trunk group MLAG
@@ -41,7 +44,7 @@ interface Port-Channel2
    description SPINES_Po4
    no shutdown
    switchport
-   switchport trunk allowed vlan none
+   switchport trunk allowed vlan 20
    switchport mode trunk
    mlag 2
 !
