--- a/sites/site_2/group_vars/SITE2_FABRIC_SERVICES.yml
+++ b/sites/site_2/group_vars/SITE2_FABRIC_SERVICES.yml
@@ -26,3 +26,29 @@ tenants:
                 ip_address: 10.40.40.2/24
               - node: s2-spine2
                 ip_address: 10.40.40.3/24
+##################################################################
+# WAN/Core Edge Links
+##################################################################
+
+core_interfaces:
+  p2p_links:
+
+    - ip: [ 10.0.0.37/31, 10.0.0.36/31 ]
+      nodes: [ s2-spine1, WANCORE ]
+      interfaces: [ Ethernet7, Ethernet2 ]
+      include_in_underlay_protocol: true
+
+    - ip: [ 10.0.0.41/31, 10.0.0.40/31 ]
+      nodes: [ s2-spine1, WANCORE ]
+      interfaces: [ Ethernet8, Ethernet2 ]
+      include_in_underlay_protocol: true
+
+    - ip: [ 10.0.0.39/31, 10.0.0.38/31 ]
+      nodes: [ s2-spine2, WANCORE ]
+      interfaces: [ Ethernet7, Ethernet2 ]
+      include_in_underlay_protocol: true
+
+    - ip: [ 10.0.0.43/31, 10.0.0.42/31 ]
+      nodes: [ s2-spine2, WANCORE ]
+      interfaces: [ Ethernet8, Ethernet2 ]
+      include_in_underlay_protocol: true
